# dropp

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  default.nix  dropp-client.cabal  dropp.cabal  dropp.py
appengine/: app.yaml  appengine_config.py  availability.go  cron.yaml  dropp.go  index.yaml  main.py  queue.yaml  snapshot.go  test.csv
appengine/templates/: email.html  home.html
db/: sqitch.conf  sqitch.plan
db/deploy/: appschema.sql  items.sql  roles.sql  snapshot.sql
db/revert/: appschema.sql  items.sql  roles.sql  snapshot.sql
db/verify/: appschema.sql  items.sql  roles.sql  snapshot.sql
ebay-service/: Dockerfile  app.yaml  config.py  ebay-service.yaml  ebay-worker.yaml  ebay.yaml  main.py  requirements.txt
ebay_client/: ebay_server.py  requirements.txt  requirements_dev.txt  zmq_client.py
localsrv/: LocalSrv.hs
locserv/: LocServ.hs
main-app/: api.go  availability.go  conf.go  config.yaml  dropp.go  ebay.go  middlewares.go  snapshot.go
main-app/templates/: email.html  home.html
settings/: ebay.yaml  settings.yaml
src/: BangDataSource.hs  HTML.hs  HttpDataSource.hs  Main.hs
src/Dropp/: DataTypes.hs  HTML.hs  Http.hs  HttpDataSource.hs
test/: test.hs
