name: dropp
version: 0.3.3.2
synopsis: Drop shipping system.
license: BSD3
license-file: LICENSE
author: Simone Trubian
maintainer: simone.trubian@ondait.com
homepage:https://github.com/simone-trubian/dropp
bug-reports: https://github.com/simone-trubian/dropp/issues
copyright: Copyright: (c) 2016 Onda IT
category: Web
description: Drop shipping system.
build-type: Simple
cabal-version: >=1.10
extra-doc-files: README.md
tested-with: GHC==7.10.2

source-repository head
    type: git
    location: https://github.com/simone-trubian/dropp.git
    branch: master


library
  default-language: Haskell2010
  hs-source-dirs: src

  default-extensions:
      OverloadedStrings

  build-depends:
      base >=4.8 && <4.9
    , haxl >= 0.3.0
    , hashable >= 1.2.3.3
    , bytestring >= 0.4.24
    , http-conduit >= 2.1.8
    , html-conduit >= 1.2.0
    , xml-conduit >= 1.3.2
    , async >= 2.0.2
    , text >= 1.2.1.3
    , blaze-html >= 0.8
    , blaze-markup >= 0.7
    , parsec >= 3.0

  exposed-modules:
    Dropp.HttpDataSource
    Dropp.HTML


executable dropp
  main-is: src/Main.hs
  default-language: Haskell2010

  default-extensions:
      OverloadedStrings

  build-depends:
      base >=4.8 && <4.9
    , dropp
    , text >= 1.2.1.3
    , time >= 1.5.0
    , amazonka >= 1.3.5
    , amazonka-ses >= 1.3.5
    , lens >= 4.0


executable locserv
  main-is: locserv/LocServ.hs
  default-language: Haskell2010

  default-extensions:
      OverloadedStrings
      DataKinds
      TypeOperators
      FlexibleInstances
      MultiParamTypeClasses

  build-depends:
      base >=4.8 && <4.9
    , dropp
    , servant >= 0.4
    , servant-lucid >= 0.4
    , lucid >= 2.9
    , text >= 1.2.1.3
    , http-media >= 0.6


test-suite test

  default-language: Haskell2010
  main-is: test.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  default-extensions:
      OverloadedStrings

  build-depends:
      base >=4.8 && <4.9
    , text >= 1.2.1.3
    , tasty >= 0.11.0.1
    , bytestring >= 0.4.24
    , tasty-hunit >= 0.9.2
    , blaze-html >= 0.8
    , blaze-markup >= 0.7
    , dropp
